# alphax-pos-core-v15.5.1

./: DEPLOY_v15.5.7.md  MANIFEST.in  README.md  build_workspace.py  fetch_vendor_bundles.py  pyproject.toml  setup.py
alphax_pos_suite/: .gitignore  Makefile  __init__.py  hooks.py  modules.txt  patches.txt
alphax_pos_suite/alphax_pos_suite/: __init__.py  api.py  install.py
alphax_pos_suite/alphax_pos_suite/alphax_pos_suite/: install.py
alphax_pos_suite/alphax_pos_suite/appearance/: workspace_theme_css.py
alphax_pos_suite/alphax_pos_suite/boot/: api.py
alphax_pos_suite/alphax_pos_suite/cashier/: vendor.py
alphax_pos_suite/alphax_pos_suite/config/: desktop.py
alphax_pos_suite/alphax_pos_suite/data/: custom_fields_seed.json
alphax_pos_suite/alphax_pos_suite/floor/: api.py
alphax_pos_suite/alphax_pos_suite/integrations/: card_capture.py  erpnext_stock.py  zatca_adapter.py
alphax_pos_suite/alphax_pos_suite/loyalty/: engine.py  hooks.py
alphax_pos_suite/alphax_pos_suite/pharmacy/: api.py  validator.py
alphax_pos_suite/alphax_pos_suite/pos/: dedupe.py  maintenance.py  posting.py  processing.py  redemption.py  shift.py
alphax_pos_suite/alphax_pos_suite/reporting/: close_reports.py
alphax_pos_suite/alphax_pos_suite/security/: manager_pin.py
alphax_pos_suite/alphax_pos_suite/tests/: fixtures.py  test_loyalty_engine.py  test_orders_and_recipes.py  test_pos_boot.py
alphax_pos_suite/fixtures/: print_format.json  workspace.json
alphax_pos_suite/frontend/: DO_NOT_BUILD.md  index.html  package.json  vite.config.js
(+159 files in other folders)
